# VarWizard

./: MANIFEST.in  pyproject.toml  readme.md  setup.py
examples/ex1/: in1.js  run1.sh
examples/ex2/: run.sh
examples/ex3/: example.py
varwizard/: __init__.py  __main__.py  cli.py
varwizard/config/: __init__.py  prefix_tuning.py
varwizard/data/: input_preparation.py
varwizard/generation/: gen.py
varwizard/libs/varwizard/: varwizard.tar
varwizard/models/: bloom.py  codet5.py  varwizard.py
varwizard/utils/: obfuscation.py
