[build-system]
requires = [
    "setuptools>=60",
    "wheel",
]
build-backend = "setuptools.build_meta"
[tool.poetry]
name="varwizard"
version="0.2"
license = "Apache-2.0"
description = "An Automated Tool for Improving Code Quality Through Variable Name Refinement with Language Models"
readme = "readme.md"
homepage = "https://github.com/FSoft-AI4Code/VarWizard"
repository = "https://github.com/FSoft-AI4Code/VarWizard"
keywords = ["variable renaming", "language models", "code quality"]
authors = ["FSoft-AI4Code <support.aic@fpt.com>"]
[tool.poetry.dependencies]
python = ">=3.7"
torch = ">=1.12.1"
peft = "0.1.0"
transformers = ">=4.28.0"
tree-sitter = "*"
codetext = "*"
[tool.poetry.plugins."console_scripts"]
varwizard = "varwizard:main"